5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4431/executions/1613_1801.log
== TEST (2019-03-28 22:56:03) 
-- CODE:
x=input("Digite o nome o objeto:")
y=input("Digite o tanto de vezes que ira repetir: ")
z=abra
c=z+x
print(c)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    z=abra
NameError: name 'abra' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 22:56:43) 
-- CODE:
x=input("Digite o nome o objeto:")
y=input("Digite o tanto de vezes que ira repetir: ")
z="abra"
c=z+x
print(c)
-- OUTPUT:
abralivro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 22:56:44) 
-- CODE:
x=input("Digite o nome o objeto:")
y=input("Digite o tanto de vezes que ira repetir: ")
z="abra"
c=z+x
print(c)
-- OUTPUT:
abralivro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 22:57:32) 
-- CODE:
x=input("Digite o nome o objeto:")
y=input("Digite o tanto de vezes que ira repetir: ")
z="abra"
c=z+x
d=c*y
print(d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    d=c*y
TypeError: can't multiply sequence by non-int of type 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 22:58:47) 
-- CODE:
x=input("Digite o nome o objeto:")
y=int(input("Digite o tanto de vezes que ira repetir: "))
z="abra"
c=z+x
d=c*y
print(d)
-- OUTPUT:
abralivroabralivroabralivroabralivroabralivroabralivroabralivroabralivro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-28 22:58:58) 
-- CODE:
x=input("Digite o nome o objeto:")
y=int(input("Digite o tanto de vezes que ira repetir: "))
z="abra"
c=z+x
d=c*y
print(d)
-- EXECUTION TIME:
0.152512
-- TEST CASE 1:
---- input:
livro
8
---- correct output:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
---- user output:
abralivroabralivroabralivroabralivroabralivroabralivroabralivroabralivro
-- TEST CASE 2:
---- input:
carro
2
---- correct output:
Abra carro Abra carro
---- user output:
abracarroabracarro
-- TEST CASE 3:
---- input:
caixa
1
---- correct output:
Abra caixa
---- user output:
abracaixa
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 23:06:45) 
-- CODE:
x=input("Digite o nome o objeto:")
y=int(input("Digite o tanto de vezes que ira repetir: "))
z="Abra "
c=z+x
d=c*y
print(d)
-- OUTPUT:
Abra livroAbra livroAbra livroAbra livroAbra livroAbra livroAbra livroAbra livro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-28 23:07:18) 
-- CODE:
x=input("Digite o nome o objeto:")
y=int(input("Digite o tanto de vezes que ira repetir: "))
z="Abra "
c=z+x
d=c*y
print(d)
-- EXECUTION TIME:
0.170564
-- TEST CASE 1:
---- input:
livro
8
---- correct output:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
---- user output:
Abra livroAbra livroAbra livroAbra livroAbra livroAbra livroAbra livroAbra livro
-- TEST CASE 2:
---- input:
carro
2
---- correct output:
Abra carro Abra carro
---- user output:
Abra carroAbra carro
-- TEST CASE 3:
---- input:
caixa
1
---- correct output:
Abra caixa
---- user output:
Abra caixa
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 23:07:36) 
-- CODE:
x=input("Digite o nome o objeto:")
y=int(input("Digite o tanto de vezes que ira repetir: "))
z="Abra "
c=z+x
d=c* y
print(d)
-- OUTPUT:
Abra livroAbra livroAbra livroAbra livroAbra livroAbra livroAbra livroAbra livro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 23:13:27) 
-- CODE:
x=input("Digite o nome o objeto:")
y=int(input("Digite o tanto de vezes que ira repetir: "))
z="Abra + x"
c=z+x
d=c* y
print(d)
-- OUTPUT:
Abra + xlivroAbra + xlivroAbra + xlivroAbra + xlivroAbra + xlivroAbra + xlivroAbra + xlivroAbra + xlivro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 23:14:15) 
-- CODE:
x=input("Digite o nome o objeto:")
y=int(input("Digite o tanto de vezes que ira repetir: "))
z="Abra " .
c=z+x
d=c* y
print(d)
-- ERROR:
File "XXXX", line 3
    z="Abra " .
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 23:14:25) 
-- CODE:
x=input("Digite o nome o objeto:")
y=int(input("Digite o tanto de vezes que ira repetir: "))
z="Abra " 
c=z+x
d=c* y
print(d)
-- OUTPUT:
Abra livroAbra livroAbra livroAbra livroAbra livroAbra livroAbra livroAbra livro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 00:09:03) 
-- CODE:
x=input("Digite o nome o objeto:")
y=int(input("Digite o tanto de vezes que ira repetir: "))
z="Abra " 
c=(z+x)*y
print(c)
-- OUTPUT:
Abra livroAbra livroAbra livroAbra livroAbra livroAbra livroAbra livroAbra livro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 00:09:40) 
-- CODE:
x=input("Digite o nome o objeto:")
y=int(input("Digite o tanto de vezes que ira repetir: "))
z=" Abra" 
c=(z+x)*y
print(c)
-- OUTPUT:
Abralivro Abralivro Abralivro Abralivro Abralivro Abralivro Abralivro Abralivro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 00:09:58) 
-- CODE:
x=input("Digite o nome o objeto:")
y=int(input("Digite o tanto de vezes que ira repetir: "))
z=" Abra " 
c=(z+x)*y
print(c)
-- EXECUTION TIME:
0.177391
-- TEST CASE 1:
---- input:
livro
8
---- correct output:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
---- user output:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
-- TEST CASE 2:
---- input:
carro
2
---- correct output:
Abra carro Abra carro
---- user output:
Abra carro Abra carro
-- TEST CASE 3:
---- input:
caixa
1
---- correct output:
Abra caixa
---- user output:
Abra caixa
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 18:34:33) 
-- CODE:
x=input("Digite o nome o objeto:")
y=int(input("Digite o tanto de vezes que ira repetir: "))
z=" Abra " 
c=(" Abra "+x)*y
print(c)
-- OUTPUT:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-01 18:34:50) 
-- CODE:
x=input("Digite o nome o objeto:")
y=int(input("Digite o tanto de vezes que ira repetir: "))
z=" Abra " 
c=(" Abra "+x)*y
print(c)
-- EXECUTION TIME:
0.167632
-- TEST CASE 1:
---- input:
livro
8
---- correct output:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
---- user output:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
-- TEST CASE 2:
---- input:
carro
2
---- correct output:
Abra carro Abra carro
---- user output:
Abra carro Abra carro
-- TEST CASE 3:
---- input:
caixa
1
---- correct output:
Abra caixa
---- user output:
Abra caixa
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 18:54:25) 
-- CODE:
x=input("Digite o nome o objeto:")
y=int(input("Digite o tanto de vezes que ira repetir: "))
c=(" Abra "+x)*y
print(c)
-- OUTPUT:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-01 18:54:36) 
-- CODE:
x=input("Digite o nome o objeto:")
y=int(input("Digite o tanto de vezes que ira repetir: "))
c=(" Abra "+x)*y
print(c)
-- EXECUTION TIME:
0.138172
-- TEST CASE 1:
---- input:
livro
8
---- correct output:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
---- user output:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
-- TEST CASE 2:
---- input:
carro
2
---- correct output:
Abra carro Abra carro
---- user output:
Abra carro Abra carro
-- TEST CASE 3:
---- input:
caixa
1
---- correct output:
Abra caixa
---- user output:
Abra caixa
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
